@@ -1,3 +1,7 @@
+[B]Version 2.5.2[/B]
+
+- added fanart to non show listings
+
 [B]Version 2.5.1[/B]
 
 - change default icon to hulu for any listing without one. 
